[package]
name = "triangulate_runner"
version = "0.1.0"
authors = ["Colin Neville <nevilcrpi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
triangulate = { version = "0.1", features = ["default", "debugging"]}
