[package]
name = "triangulate_runner"
version = "0.2.0"
authors = ["Colin Neville <colinjneville@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
triangulate = { version = "0.2", features = ["default", "_debugging"]}
